--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,4 +1,7 @@
 extends base.pug
 
-block content 
-    h2 Edit Video
+block content
+    h4 Change Title of video
+    form(method="post")
+        input(name="title", placeholder="Video Title" value=video.title, required)
+        input(value="Save", type="submit")
