--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,7 +1,9 @@
 extends base.pug
 
 block content
-    h4 Change Title of video
+    h4 Update Video
     form(method="post")
-        input(name="title", placeholder="Video Title" value=video.title, required)
+        input(name="title", placeholder="Video Title" value=video.title, required , maxlength=20)
+        input(placeholder="Description", value=video.description required, type="text",name="description" , minlength=20)
+        input(placeholder="Hashtags, seperated by comma.", value=video.hashtags.join() required, type="text",name="hashtags")
         input(value="Save", type="submit")
