--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -9,9 +9,11 @@ html(lang="ko")
             nav 
                 ul  
                     li 
-                        a(href="/videos/upload") Upload Video
-                    li 
                         a(href="/") Home
+                    li 
+                        a(href="/search") Search
+                    li 
+                        a(href="/videos/upload") Upload Video
         main
             block content
     include partials/footer
