--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -15,6 +15,8 @@ html(lang="ko")
                     li 
                         a(href="/videos/upload") Upload Video
                     li 
+                        a(href="/login") Login
+                    li 
                         a(href="/join") Join
         main
             block content
