--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -14,10 +14,16 @@ html(lang="ko")
                         a(href="/search") Search
                     li 
                         a(href="/videos/upload") Upload Video
-                    li 
-                        a(href="/login") Login
-                    li 
-                        a(href="/join") Join
+                    if loggedIn 
+                        li 
+                            a(href="/users/logout") Logout
+                        li 
+                            a(href="/my-profile") #{loggedInUser.name}의 Profile
+                    else 
+                        li 
+                            a(href="/login") Login
+                        li
+                            a(href="/join") Join
         main
             block content
     include partials/footer
