--- a/src/views/videos/upload.pug
+++ b/src/views/videos/upload.pug
@@ -1,9 +1,11 @@
-extends base
+extends ../base
 
 block content 
     if errorMessage 
         span=errorMessage
-    form(method="POST")
+    form(method="POST", enctype = "multipart/form-data")
+        label(for="video") Video File 
+        input(type="file", accept="videol/*", required, id="video", name="video")
         input(placeholder="Title", required, type="text",name="title",maxlength=20)
         input(placeholder="Description", required, type="text",name="description" , minlength=20)
         input(placeholder="Hashtags, seperated by comma.", required, type="text",name="hashtags")
